<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
>
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>de.rpgframework</groupId>
		<artifactId>shadowrun6-master</artifactId>
		<version>0.0.1-SNAPSHOT</version>
	</parent>
	<artifactId>shadowrun6-core</artifactId>
	<name>SR6_Core</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.target>11</maven.compiler.target>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.install.skip>false</maven.install.skip>
		<maven.deploy.skip>false</maven.deploy.skip>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.prelle</groupId>
			<artifactId>simple-persist</artifactId>
		</dependency>
		<dependency>
			<groupId>de.rpgframework</groupId>
			<artifactId>rpgframework-core</artifactId>
		</dependency>
		<dependency>
			<groupId>de.rpgframework</groupId>
			<artifactId>rpgframework-rules</artifactId>
		</dependency>
		<dependency>
			<groupId>de.rpgframework</groupId>
			<artifactId>shadowrun-common-core</artifactId>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.8</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>